fixed overflowing content in small screen

--- a/responsive.css
+++ b/responsive.css
@@ -69,17 +69,21 @@
         margin: 20px 0;
     }
     .productdecp{
-        font-size: 11px;
+        font-size: 3vw;
     }
     .color{
-        width: 25px;
-        height: 25px;
+        width: 5vw;
+        height: 3vh;
     }
     .size{
-        width: 25px;
-        height: 25px;
-        padding: 3px;
-        font-size: 12px;
+        display: none;
+    }
+    .sizesm{
+        display: block;
+        margin: 10px 0;
+    }
+    .sizetitle{
+        color: rgb(0, 0, 0);
     }
     .productbtn{
         width: 80px;
@@ -92,30 +96,33 @@
         top: 10%;
         font-size: 16px;
         width: 300px;
-        height: 500px;
+        height: 460px;
         padding: 10px 20px;
     }
     .paymenttitle{
         font-size: 20px;
+        margin: 10px;
     }
 
     .gallery{
-        margin: 20px;
+        padding: 20px;
+        margin: 20px 0;
+        justify-content: space-between;
     }
     .gallerytitle{
         font-size: 20px;
     }
     .galleryitem{
-        padding: 0 10px;
+        margin: 0 5px;
+        padding: 0;
     }
     .galleryimg{
-        width: 120px;
+        width: 100%;
     }
 
     .nsitem{
         height: 250px;
     }
-
     .nstitlesm{
         font-size: 18px;
     }
@@ -135,6 +142,22 @@
         flex-direction: column;
     }
     .footerleft ,.footerright{
-        padding: 30px;
+        padding: 25px;
+    }
+    .finput{
+        width: 330px;
+    }
+    .footertitle{
+        text-align: center;
+    }
+    .footerright{
+        justify-content: center;
+    }
+    .ficons{
+        display: flex;
+        justify-content: center
+    }
+    .footerinfo{
+        text-align: center;
     }
 }
